[tool.poetry]
name = "blankly-utils"
version = "0.1.4"
description = "Trading stategy utils for Blankly Finance"
authors = ["c0indev3l <working4coins@gmail.com>"]
readme = "README.md"
packages = [{include = "blankly_utils"}]

[tool.poetry.dependencies]
python = "^3.9"
blankly = "^1.18.25b0"
python-dotenv = "^1.0.0"
click = "^8.1.6"
dash = "^2.11.1"
dash-auth = "^2.0.0"
sqlalchemy = "^2.0.19"
apscheduler = "^3.10.1"
dash-bootstrap-components = "^1.4.2"
pydantic = "^2.2.1"
openpyxl = "^3.1.2"

[tool.poetry.scripts]
display_backtest = "blankly_utils.display_backtest:main"
preprocessing = "blankly_utils.preprocessing:main"
postprocessing = "blankly_utils.postprocessing:main"
store_to_db = "blankly_utils.monitor.cli.store_to_db:main"
display_monitor = "blankly_utils.monitor.cli.display_monitor:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
